run flutter integration tests as espresso tests on saucelabs real device

--- a/sauceconnect/flutter.yaml
+++ b/sauceconnect/flutter.yaml
@@ -11,7 +11,7 @@ suites:
       class:
         - com.example.my_demo_app_flutter.MainActivityTest
     devices:
-      - name: ".*"
+      - name: "Google Pixel.*"
 artifacts:
   download:
     when: always
