add Makefile scripts for building IPA/APK files

--- a/.sauce/flutter_integration_test_ios.yaml
+++ b/.sauce/flutter_integration_test_ios.yaml
@@ -3,8 +3,8 @@ kind: xctest
 sauce:
   concurrency: 1
 xctest:
-  app: ./build/ios_integration/Build/Products/Release-iphoneos/Runner.app
-  xcTestRunFile: ./build/ios_integration/Build/Products/Runner_iphoneos18.1-arm64.xctestrun
+  app: ./build/ios_integ/Build/Products/Runner.ipa
+  xcTestRunFile: ./build/ios_integ/Build/Products/Runner_iphoneos18.2-arm64.xctestrun
 suites:
   - name: "Basic XCTest"
     devices:
@@ -13,5 +13,5 @@ artifacts:
   download:
     when: always
     match:
-      - junit.xml
+      - "*.*"
     directory: ./
