--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
-# Miscellaneous
+# Ignore all by default, only explicitly whitelisted files/folders are tracked.
+*
+
+# Allow relevant folders
+!/.sauce
+!/android
+!/integration_test
+!/ios
+!/lib
+!/test
+
+# Allow important project files
+!.gitignore
+!.metadata
+!analysis_options.yaml
+!Makefile
+!README.md
+!pubspec.lock
+!pubspec.yaml
+
+# Re-ignore files and folders that should not be tracked
+# (copied from the original .gitignore)
 *.class
 *.log
 *.pyc
@@ -10,18 +31,14 @@
 .svn/
 migrate_working_dir/
 
-# IntelliJ related
+# IDE-related
 *.iml
 *.ipr
 *.iws
 .idea/
+.vscode/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
+# Flutter/Dart/Pub-related
 **/doc/api/
 **/ios/Flutter/.last_build_id
 .dart_tool/
@@ -29,7 +46,7 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/
+build/
 
 # Symbolication related
 app.*.symbols
@@ -37,7 +54,7 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
-# Android Studio will place build artifacts here
+# Android Studio build artifacts
 /android/app/debug
 /android/app/profile
 /android/app/release
